improvements to gui
tab order
better placement
anchoring in some places

--- a/UI/UI/Properties/Resources.resx
+++ b/UI/UI/Properties/Resources.resx
@@ -150,7 +150,7 @@ create table Customers
    CustomerID                   int                            identity(1,1)			 not null,
    FirstName                    varchar(50)                    not null,
    LastName                     varchar(50),
-   Passport                     int                            not null,
+   Passport                     varchar(50)                            not null,
    Nationality                  varchar(50),
    Birthdate                    date,
    Username                     varchar(50)                    not null                    unique,
